[project]
name = "orchestration"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marijn Valk", email = "marijncv@hotmail.com"},
]
dependencies = [
    "dagster>=1.6.6",
    "dagster-webserver>=1.6.6",
    "psycopg2>=2.9.10",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.7.0",
]
